# RecRAG

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  ISSUES.md  PLAN.md  README.md  app.py  config.json  config.toml  docker-compose.yml  ingest.py  pyproject.toml
backend/: app.py  evaluate.py  ingest.py  watch.py
backend/src/: config.py  core.py  pipelines.py  registry.py
backend/src/adapters/: __init__.py  base.py  embedding.py  llm.py  nim.py  utils.py
backend/src/evaluation/: ragas_eval.py
backend/src/loaders/: __init__.py  base.py  pdf.py
backend/src/models/: __init__.py  chunk.py
backend/src/pipelines/: __init__.py  base.py  ingestion.py  retrieval.py  utils.py
backend/src/splitters/: __init__.py  base.py  sentence.py
backend/src/stores/: __init__.py  base.py  faiss.py
data/: eval_dataset.json
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  ISSUES.md  PLAN.md
tests/: conftest.py  test_core.py
tests/test_adapters/: test_embedding.py  test_llm.py
tests/test_evaluation/: test_ragas_eval.py
