[project]
name = "test-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llama-index>=0.14.14",
    "faiss-cpu>=1.7.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.54.0",
    "requests>=2.31.0",
    "toml>=0.10.2",
    "openai>=1.0.0",
    "watchdog>=5.0.0",
]
