[project]
name = "recrag"
version = "0.1.0"
description = "Retrieval-Augmented Generation pipeline with FAISS vector storage"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llama-index>=0.14.14",
    "faiss-cpu>=1.7.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.54.0",
    "requests>=2.31.0",
    "toml>=0.10.2",
    "openai>=1.0.0",
    "watchdog>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
